package Card;

public abstract class Card {

    public int getId() {
        return id;
    }

    public void setId(int id) {
        this.id = id;
    }


    public String getCardId() {
        return cardId;
    }

    public void setCardId(String cardId) {
        this.cardId = cardId;
    }

    protected String cardId;
    protected int id;
    protected String name;
    protected float damage;
    protected String elementType;

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }

    public float getDamage() {
        return damage;
    }

    public void setDamage(float damage) {
        this.damage = damage;
    }

    public String getElementType() {
        return elementType;
    }

    public void setElementType(String elementType) {
        this.elementType = elementType;
    }
}
