import Card.*;
public class Package {
    private final Card[] packageCard = new Card[5];

}
