import java.util.ArrayList;
import java.util.List;
import Card.*;

public class Stack {
    List<Card> myCard = new ArrayList<>();

}
